News UAT/force-app/main/default/objects/Topic__c/fields/Pillar_ID__c.field-meta.xml
<CustomField>
    <fullName>Pillar_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pillar ID</label>
    <referenceTo>Pillar__c</referenceTo>
    <relationshipLabel>Topics</relationshipLabel>
    <relationshipName>Topics</relationshipName>
    <type>Lookup</type>
</CustomField>