News UAT/force-app/main/default/objects/Topic__c/fields/Pillar_Name__c.field-meta.xml
<CustomField>
    <fullName>Pillar_Name__c</fullName>
    <formula>Pillar_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pillar Name</label>
    <type>Text</type>
</CustomField>