News UAT/force-app/main/default/objects/Topic__c/fields/Topic_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_ID__c</fullName>
    <externalId>true</externalId>
    <label>Topic ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>