News UAT/force-app/main/default/objects/Topic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Topic_ID__c</columns>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Pillar_ID__c</columns>
    <columns>Max_Score__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>